--- a/angular.json
+++ b/angular.json
@@ -117,6 +117,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/logo.jpg",
               "src/favicon.ico",
               "src/assets",
               "src/manifest.webmanifest"
